Add test that does something

--- a/vrf/uvm-tb/work/Makefile
+++ b/vrf/uvm-tb/work/Makefile
@@ -16,6 +16,7 @@ NPROC=16
 # Without --debug it has internal error
 # NO_DPI prevents linkage error
 BUILD_OPTS = \
+	$(OPTS) \
 	--output-groups $(NPROC) \
 	-DUVM_NO_DPI \
 	--timescale 1ns/1ps \
